# EE569_DIP_Assignments

Assignment_1/homework1_codes/: README.md
Assignment_1/homework1_codes/prob1a1/: CMakeLists.txt  Image.cpp  Image.h  README  main.cpp
Assignment_1/homework1_codes/prob2b/: CMakeLists.txt  Histogram.cpp  Histogram.h  Image.cpp  Image.h  README  SingleChannel.cpp  SingleChannel.h  main.cpp
Assignment_1/homework1_codes/prob3a/: .gitignore  CMakeLists.txt  Histogram.cpp  Histogram.h  README  SingleChannel.cpp  SingleChannel.h  main.cpp
Assignment_2/homework2_codes/hw2_prob1a/: CMakeLists.txt  Image.h  README.rtf  SingleChannel.cpp  SingleChannel.h  main.cpp
Assignment_2/homework2_codes/hw2_prob1b/: CMakeLists.txt  Image.cpp  Image.h  README.rtf  SingleChannel.cpp  SingleChannel.h  main.cpp
Assignment_2/homework2_codes/hw2_prob2ab/: CMakeLists.txt  Dithering.cpp  Dithering.h  Image.h  README.rtf  main.cpp
Assignment_2/homework2_codes/hw2_prob2c/: CMYKColorSpace.cpp  CMYKColorSpace.h  CMakeLists.txt  Dithering.cpp  Dithering.h  Image.cpp  Image.h  README  main.cpp
Assignment_2/homework2_codes/hw_2_prob3a/: CMakeLists.txt  Image.cpp  Image.h  Morph.cpp  Morph.h  README  main.cpp
Assignment_2/homework2_codes/hw_2_prob3b/: Image.cpp  (+6 more)
Assignment_3/homework3_codes/: pca_hist.m
Assignment_3/homework3_codes/hw3_prob1c/: CMakeLists.txt  Image.cpp  Image.h  README1c.rtf  Texture.cpp  Texture.h  main.cpp
Assignment_3/homework3_codes/hw3_prob2a/: CMakeLists.txt  EdgeDetector.cpp  EdgeDetector.h  Histogram.cpp  Histogram.h  Image.cpp  Image.h  README2a.rtf  main.cpp
(+47 files in other folders)
